@@ -1,5 +1,13 @@
 2003-09-26  Rodrigo Moya <rodrigo@ximian.com>
 
+	* pcs/cal-backend-sync.c (_cal_backend_create_object): only free the
+	returned UID if it's not NULL.
+
+	* pcs/cal.c (cal_notify_object_created): dont send NULL strings to
+	ORBit code.
+
+2003-09-26  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/comp-util.c (cal_comp_is_on_server): free the icalcomponent
 	returned from cal_client_get_object, and return TRUE if we find
 	the component on the backend.
